manifests/seiscomp/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seiscomp-ingress
  annotations:
    cert-manager.io/cluster-issuer: "cluster-issuer"
    traefik.ingress.kubernetes.io/router.middlewares: dataprovider-staging-strip-seiscomp-prefix@kubernetescrd

spec:
  tls:
    - hosts:
      - dataprovider.10.201.2.221.nip.io
      secretName: seiscomp-tls

  rules:
    - host: dataprovider.10.201.2.221.nip.io
      http:
        paths:
          - path: /seiscomp
            pathType: Prefix
            backend:
              service:
                name: seiscomp-svc
                port:
                  number: 8080
